...
            app:layout_constraintGuide_begin="204dp" />
        <!-- END MonsterMath Header Section -->


        <!-- START Material card 1 test wrapping constraint into this -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/matCard1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideVMonsterBottom">

            <!--START Card 1 using a ConstraintLayout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPink"
                android:padding="16dp">

                <TextView
...
                <TextView
                    android:id="@+id/q1OpText1"
                    style="@style/question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1OpText1"
                    app:layout_constraintBaseline_toBaselineOf="@+id/q1UserValue"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/q1Label"
                    tools:ignore="HardcodedText" />

                <EditText
...
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/matCard1">

            <!--START Card 2 using a ConstraintLayout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPurpleLight"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/matCard1">

...
                    android:text="@string/q2OperationText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/q2Label" />


                <RadioGroup
                    android:id="@+id/q2BtnGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/q2OperationText">
...
                        android:layout_marginEnd="8dp"
                        android:button="@null"
                        android:text="@string/q2BtnTrue"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

                    <RadioButton
                        android:id="@+id/q2BtnFalse"
                        style="@style/btnFalse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:text="@string/q2BtnFalse"
                        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
...
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/matCard2">

            <!--START Card 3 using a ConstraintLayout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPink"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/matCard2">

...
                    android:layout_height="wrap_content"
                    android:text="@string/q2OperationText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/q3Label" />

                <RadioGroup
                    android:id="@+id/q3BtnGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/q3OperationText">
...
                        android:layout_marginEnd="8dp"
                        android:button="@null"
                        android:text="@string/q2BtnFalse"
                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                    <RadioButton
                        android:id="@+id/q3btnOption2"
                        style="@style/btnMChoice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:button="@null"
                        android:text="@string/q2BtnTrue"
...
