...

    <!-- Q2 -->
    <string name="q2Number">0</string>
    <string name="q2Label">Label</string>
    <string name="q2OperationText">Operation Text</string>
    <string name="q2BtnTrue">True</string>
    <string name="q2BtnFalse">False</string>
    <string name="q2Feedback" />

    <!-- Q3 -->
    <string name="q3Number">0</string>
    <string name="q3Label">Label</string>
    <string name="q3OperationText">Operation Text</string>
...
